# aoc

./: .gitignore  Cargo.toml  Gemfile  p2_test_input.dot  real_input.dot  real_input_compacted.dot  shell.nix
src/: main.rs  template.rs  utils.rs  year2024.rs
src/utils/: geometry.rs  graph.rs  grid.rs  mod.rs  point.rs
src/utils/deck/: card.rs
src/utils/point/: mod.rs
src/utils/snafu/: mod.rs
src/year2015/: day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year2015/day1/: mod.rs
src/year2019/: computer.rb
src/year2019/day1/: day1.rb
src/year2019/day10/: day10.rb
src/year2019/day2/: day2.rb
src/year2019/day3/: day3.rb
src/year2019/day4/: day4.rb
src/year2019/day5/: day5.rb
src/year2019/day6/: day6.rb
src/year2019/day7/: day7.rb
src/year2019/day8/: day8.rb
src/year2019/day9/: day9.rb
src/year2020/: mod.rs
src/year2020/day1/: mod.rs  test_input
src/year2020/day2/: mod.rs  test_input
src/year2020/day3/: mod.rs
src/year2020/day4/: mod.rs  test_input_part_2
src/year2020/day5/: mod.rs
src/year2020/day6/: mod.rs
src/year2020/day7/: mod.rs
src/year2020/day8/: mod.rs
src/year2020/day9/: mod.rs
src/year2021/day1/: mod.rs
src/year2021/day2/: mod.rs
src/year2022/: mod.rs
src/year2022/day1/: mod.rs
src/year2022/day10/: mod.rs  real_result
src/year2023/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  mod.rs
src/year2024/: day1.rs  day16.rs
(+67 files in other folders)
