[package]
name = "aoc"
version = "0.1.0"
authors = ["Lucas Uyezu <lucas@uyezu.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
rayon = "1.8.0"
itertools = "0.12.0"
md5 = "0.7.0"
fancy-regex = "0.13.0"
serde_json = "1.0.113"
pathfinding = "4.12.0"
